WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196321
In-memory code cache should not share bytecode across domains
https://bugs.webkit.org/show_bug.cgi?id=196321
Summary
In-memory code cache should not share bytecode across domains
Tadeu Zagallo
Reported
2019-03-27 15:29:59 PDT
<
rdar://problem/45807366
>
Attachments
Patch
(1.86 KB, patch)
2019-03-27 15:45 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-03-27 15:45:06 PDT
Created
attachment 366115
[details]
Patch
Geoffrey Garen
Comment 2
2019-03-27 16:41:52 PDT
Comment on
attachment 366115
[details]
Patch r=me
Saam Barati
Comment 3
2019-03-27 18:37:43 PDT
Comment on
attachment 366115
[details]
Patch Why?
Geoffrey Garen
Comment 4
2019-03-28 10:00:08 PDT
For privacy, it's WebKit's preferred practice not to share caches across domains. More detailed information in Radar.
WebKit Commit Bot
Comment 5
2019-03-28 10:50:30 PDT
Comment on
attachment 366115
[details]
Patch Clearing flags on attachment: 366115 Committed
r243609
: <
https://trac.webkit.org/changeset/243609
>
WebKit Commit Bot
Comment 6
2019-03-28 10:50:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug