In-memory code cache should not share bytecode across domains https://bugs.webkit.org/show_bug.cgi?id=196321

Reviewed by Geoffrey Garen.

Use the SourceProvider's URL to make sure that the hosts match for the
two SourceCodeKeys in operator==.

* parser/SourceCodeKey.h:
(JSC::SourceCodeKey::host const):
(JSC::SourceCodeKey::operator== const):


Canonical link: https://commits.webkit.org/210629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243609 268f45cc-cd09-0410-ab3c-d52691b4dbfc